fixed particle overflow on jumbotron

--- a/src/styles/style.scss
+++ b/src/styles/style.scss
@@ -685,10 +685,6 @@ a {
 	background: linear-gradient(to right, #a30000, #f44708);
 }
 
-.particlejs {
-	position: absolute;
-}
-
 // Projects page
 .year-title {
 	font-weight: 800;
